<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/grupo1"
        android:checkableBehavior="single"
        android:enabled="true">
        <item
            android:id="@+id/menu_notas"
            android:icon="@drawable/ic_notas"
            android:title="@string/notas" />
        <item
            android:id="@+id/menu_archivo"
            android:icon="@drawable/ic_archivo"
            android:title="@string/archivo" />
        <item
            android:id="@+id/menu_papelera"
            android:icon="@drawable/ic_papelera"
            android:title="@string/papelera" />
    </group>
    <group android:id="@+id/grupo2"
        android:checkableBehavior="none"
        android:enabled="true">
        <item
            android:id="@+id/menu_opciones"
            android:icon="@drawable/ic_opciones"
            android:title="@string/opciones" />
    </group>
    <group android:id="@+id/grupo3"
        android:checkableBehavior="none"
        android:enabled="true">
        <item
            android:id="@+id/menu_codigo"
            android:icon="@drawable/ic_codigo"
            android:title="@string/codigo_fuente" />
        <item
            android:id="@+id/menu_licencia"
            android:icon="@drawable/ic_licencia"
            android:title="@string/licencia" />
    </group>
</menu>