<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/plantilla_recordatorio"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_24sdp"
    android:background="@drawable/fondo_elementos">

    <ImageView
        android:id="@+id/imagenAñadirRecordatorio"
        android:layout_width="@dimen/_28sdp"
        android:layout_height="@dimen/_28sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:src="@drawable/ic_notificacion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/añadirRecordatorioTitulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/añadir_recordatorio"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintBottom_toBottomOf="@id/imagenAñadirRecordatorio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imagenAñadirRecordatorio"
        app:layout_constraintTop_toTopOf="@id/imagenAñadirRecordatorio" />

    <EditText
        android:id="@+id/fechaRecordatorio"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:autofillHints="Fecha"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center_vertical"
        android:hint="@string/fecha"
        android:focusable="false"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imagenAñadirRecordatorio" />

    <EditText
        android:id="@+id/horaRecordatorio"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:autofillHints="Hora"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center_vertical"
        android:hint="@string/hora"
        android:focusable="false"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fechaRecordatorio" />

    <TextView
        android:id="@+id/botonAñadirRecordatorio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="@font/roboto_bold"
        android:padding="@dimen/_8sdp"
        android:text="@string/ok"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horaRecordatorio" />

    <TextView
        android:id="@+id/botonCancelarRecordatorio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="@font/roboto_bold"
        android:padding="@dimen/_8sdp"
        android:text="@string/cancelar"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/botonAñadirRecordatorio"
        app:layout_constraintTop_toBottomOf="@id/horaRecordatorio" />


</androidx.constraintlayout.widget.ConstraintLayout>