<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/plantilla_etiqueta"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:background="@drawable/fondo_elementos">

    <ImageView
        android:id="@+id/imagenAñadirEtiqueta"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_etiqueta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/añadirEtiquetaTitulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/agregar_etiqueta"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/imagenAñadirEtiqueta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imagenAñadirEtiqueta"
        app:layout_constraintTop_toTopOf="@id/imagenAñadirEtiqueta" />

    <EditText
        android:id="@+id/textoEtiqueta"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:autofillHints="Enlace web"
        android:background="@null"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center_vertical"
        android:hint="@string/escribe_un_nombre_para_la_etiqueta"
        android:imeOptions="actionDone"
        android:inputType="textUri"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imagenAñadirEtiqueta" />

    <TextView
        android:id="@+id/botonAñadirEtiqueta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/roboto_bold"
        android:padding="10dp"
        android:text="@string/ok"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textoEtiqueta" />

    <TextView
        android:id="@+id/botonCancelarEtiqueta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/roboto_bold"
        android:padding="10dp"
        android:text="@string/cancelar"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/botonAñadirEtiqueta"
        app:layout_constraintTop_toBottomOf="@id/textoEtiqueta" />


</androidx.constraintlayout.widget.ConstraintLayout>