<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/plantilla_enlace"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_8sdp"
    android:background="@drawable/fondo_elementos">

    <ImageView
        android:id="@+id/imagenAñadirURL"
        android:layout_width="@dimen/_28sdp"
        android:layout_height="@dimen/_28sdp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_url"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/añadirURLTitulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/añadir_url"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintBottom_toBottomOf="@id/imagenAñadirURL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imagenAñadirURL"
        app:layout_constraintTop_toTopOf="@id/imagenAñadirURL" />

    <EditText
        android:id="@+id/textoURL"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:autofillHints="Enlace web"
        android:background="@null"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center_vertical"
        android:hint="@string/escribe_un_enlace_web"
        android:imeOptions="actionDone"
        android:inputType="textUri"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imagenAñadirURL" />

    <TextView
        android:id="@+id/botonAñadirURL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="@font/roboto_bold"
        android:padding="@dimen/_8sdp"
        android:text="@string/ok"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textoURL" />

    <TextView
        android:id="@+id/botonCancelarURL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="@font/roboto_bold"
        android:padding="@dimen/_8sdp"
        android:text="@string/cancelar"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/botonAñadirURL"
        app:layout_constraintTop_toBottomOf="@id/textoURL" />


</androidx.constraintlayout.widget.ConstraintLayout>