<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/plantilla_borrar_nota"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_8sdp"
    android:background="@drawable/fondo_elementos">

    <ImageView
        android:id="@+id/imagenBorrarNota"
        android:layout_width="@dimen/_28sdp"
        android:layout_height="@dimen/_28sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:src="@drawable/ic_borrar_definitivamente"
        app:tint="@color/rojo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/borrarNotaTitulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/borrar_nota"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintBottom_toBottomOf="@id/imagenBorrarNota"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imagenBorrarNota"
        app:layout_constraintTop_toTopOf="@id/imagenBorrarNota" />

    <TextView
        android:id="@+id/textoBorrarNota"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:autofillHints="Enlace web"
        android:background="@null"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center_vertical"
        android:text="@string/pregunta_eliminar_nota"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imagenBorrarNota" />

    <TextView
        android:id="@+id/botonBorrarNota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/roboto_bold"
        android:padding="@dimen/_8sdp"
        android:text="@string/eliminar"
        android:textColor="@color/rojo"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textoBorrarNota" />

    <TextView
        android:id="@+id/botonCancelarBorrarNota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/roboto_bold"
        android:padding="@dimen/_8sdp"
        android:text="@string/cancelar"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/botonBorrarNota"
        app:layout_constraintTop_toBottomOf="@id/textoBorrarNota" />

</androidx.constraintlayout.widget.ConstraintLayout>