<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".actividades.CrearNotaActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:paddingBottom="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/atras"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_atras"
                android:contentDescription="@string/anadir_lista"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/icono" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toStartOf="@+id/check"
                app:layout_constraintStart_toEndOf="@+id/atras"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/añadirEtiqueta"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_etiqueta"
                    app:tint="@color/icono" />

                <ImageView
                    android:id="@+id/añadirRecordatorio"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_sin_notificacion"
                    app:tint="@color/icono" />

                <ImageView
                    android:id="@+id/añadirArchivo"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_archivo"
                    app:tint="@color/icono" />

                <ImageView
                    android:id="@+id/añadirPapelera"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_papelera"
                    app:tint="@color/icono" />

            </LinearLayout>

            <ImageView
                android:id="@+id/check"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/ic_check"
                android:contentDescription="@string/anadir_lista"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/icono" />

            <EditText
                android:id="@+id/tituloNota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/roboto_bold"
                android:hint="@string/tituloNota"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/check" />

            <TextView
                android:id="@+id/fechaNota"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/roboto_regular"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/tituloNota"
                app:layout_constraintStart_toStartOf="@+id/tituloNota"
                app:layout_constraintTop_toBottomOf="@id/tituloNota" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imagenNota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:adjustViewBounds="true"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/fechaNota"
                app:shapeAppearanceOverlay="@style/estiloImagenNota" />

            <ImageView
                android:id="@+id/borrarImagenNota"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_borrar"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/imagenNota"
                app:layout_constraintTop_toTopOf="@id/imagenNota"
                app:tint="@color/rojo" />

            <LinearLayout
                android:id="@+id/layoutURLNota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/imagenNota">

                <TextView
                    android:id="@+id/textoEnlaceWebNota"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoLink="web"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="20sp"
                    app:layout_constraintTop_toBottomOf="@id/layoutURLNota" />

                <ImageView
                    android:id="@+id/borrarEnlaceWebNota"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_borrar"
                    app:tint="@color/rojo" />

            </LinearLayout>

            <EditText
                android:id="@+id/cuerpoNota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/roboto_regular"
                android:gravity="top"
                android:hint="@string/nota"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="100dp"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutURLNota" />

            <TextView
                android:id="@+id/etiquetaNota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:background="@drawable/fondo_nota"
                android:fontFamily="@font/roboto_medium"
                android:textSize="20sp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cuerpoNota" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <include layout="@layout/plantilla_editar_nota" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>